package Herramientas;

public enum TipoIncremento {
    NEGATIVO, POSITIVO, NULO;
}
