package Herramientas;

public enum TipoWhile {
    MENOR, MAYOR, IGUAL, OTRO;

}
